--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,7 +8,14 @@
   # Description:
   #   Providing a standerdized desktop environment based on xubuntu
 
+  ## LightDM ##
+  #
+  # https://wiki.ubuntu.com/LightDM#Show_Manual_Login_Box
+  
+  ldm_allow_guest                      : false
+  ldm_greeter_hide_users               : true
 
+  
   ## Log out Menu ##
   #
   # http://docs.xfce.org/xfce/xfce4-session/advanced#kiosk_mode
@@ -19,3 +26,28 @@
   xfce_session_customize_compatibility : NONE
   xfce_session_shutdown                : ALL
   xfce_session_customize_security      : NONE
+
+  ## Desktop Theme ##
+  #
+  #
+  
+  ## Settings for channel: xsettings
+  xfconf_theme_name                  : Arc
+  xfconf_icon_theme_name             : Numix-Circle
+  xfconf_font_name                   : Roboto 10
+ 
+  ## Settings for channel: xfce4-panel
+  xfconf_xfce4panel_position         : p=8;x=0;y=0
+  xfconf_xfce4panel_size             : 34
+  xfconf_xfce4panel_background_alpha : 60
+  xfconf_xfce4panel_8_digital_format : '%H:%M'
+
+  ## Settings for channel: xfwm3
+  xfconf_xfwm4_theme                 : Arc
+  xfconf_xfwm4_title_font            : Roboto bold 9
+  xfconf_xfwm4_borderless_maximize   : false
+
+  ## Settings for channel: xfce4-desktop
+  xfconf_xfce4desktop_image_path     : n.v.t.
+
+  
