--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -65,3 +65,8 @@
   lightdm_theme                       : 'Arc'
   lightdm_icon_theme_name             : 'Numix-Circle'
   lightdm_font_name                   : 'Roboto'
+
+  ## Whisker menu ##
+  #
+
+  whisker_button_icon                 : '/opt/ansible-agent/images/ubuntu-black-start.png'
