--- a/tasks/ubuntu-1604-amd64.yml
+++ b/tasks/ubuntu-1604-amd64.yml
@@ -112,7 +112,7 @@
       dest: /etc/xdg/xfce4/kiosk/kioskrc
     
   - name: "For kioskmode (Autologin)"
-    import_tasks: xubuntu-core-autologin.yml 
+    import_tasks: xubuntu-core-kiosk.yml 
     when:
       - ldm_autologin_status == "true"
 
