--- a/tasks/ubuntu-1804-amd64.yml
+++ b/tasks/ubuntu-1804-amd64.yml
@@ -1,8 +1,8 @@
 ---
-  # Title: ansible-role-desktop-minimal
+  # Title: ansible-role-xubuntu-core
   #
   # Author: Luc Rutten
-  # Version: 1.1
+  # Version: 1.2
   # File: tasks/ubuntu-1804-amd64.yml
   #
   # Description:
@@ -34,78 +34,78 @@
       - numix-icon-theme-circle
       - fonts-roboto
 
-  - name: "Create directory /opt/ansible/"
+  - name: "Create Ansible directory structure"
     file:
-      path: /opt/ansible
+      path: "{{ item }}"
       state: directory
-     
-  - name: "Create directory /opt/ansible/scripts"
-    file:
-      path: /opt/ansible/scripts
-      state: directory
+    with_items:
+     - /opt/ansible
+     - /opt/ansible/system
+     - /opt/ansible/system/startbutton/images
+     - /opt/ansible/system/desktop/images
+     - /opt/ansible/system/login/images
+     - /opt/ansible/system/scripts
+     - /etc/xdg/xfce4/kiosk
+  
+  - name: "Download startbutton from {{ xbc_startbutton_url }} to /opt/ansible/system/startbutton/images/{{ xbc_startbutton_name }}"
+    get_url:
+      url: "{{ xbc_startbutton_url }}"
+      dest: "/opt/ansible/system/startbutton/images/{{ xbc_startbutton_name }}"
+      mode: 0755
+    when: 
+      - xbc_startbutton_state == 'enabled' and xbc_startbutton_type == 'url'
 
-  - name: "Create directory /opt/ansible/images"
-    file:
-      path: /opt/ansible/images
-      state: directory
+  - name: "Download desktop wallpaper from {{ xbc_desktop_url }} to /opt/ansible/system/desktop/images/{{ xbc_desktop_name }}"
+    get_url:
+      url: "{{ xbc_desktop_url }}"
+      dest: "/opt/ansible/system/desktop/images/{{ xbc_desktop_name }}"
+      mode: 0755
+    when: 
+      - xbc_desktop_state == 'enabled' and xbc_desktop_type == 'url'
 
-  - name: "Copy startmenu icon  ubuntu-black-start.png to /opt/ansible/images/ubuntu-black-start.png"
+  - name: "Download Login wallpaper from {{ xbc_loginwp_url }} to /opt/ansible/system/login/images/{{ xbc_loginwp_name }}"
+    get_url:
+      url: "{{ xbc_loginwp_url }}"
+      dest: "/opt/ansible/system/login/images/{{ xbc_loginwp_name }}"
+      mode: 0755
+    when: 
+      - xbc_loginwp_state == 'enabled' and xbc_loginwp_type == 'url'
+
+  - name: "Download startbutton from {{ xbc_startbutton_path }} to /opt/ansible/system/startbutton/images/{{ xbc_startbutton_name }}"
     copy:
-      src: ubuntu-black-start.png
-      dest: /opt/ansible/images/ubuntu-black-start.png
+      src: "{{ xbc_startbutton_file }}"
+      dest: "/opt/ansible/system/startbutton/images/{{ xbc_startbutton_name }}"
       mode: 0755
+    when: 
+      - xbc_startbutton_state == 'enabled' and xbc_startbutton_type == 'file'  
 
-  - name: "Copy startmenu icon wallpaper.png to /opt/ansible/images/wallpaper.png"
+  - name: "Download desktop wallpaper from {{ xbc_desktop_path }} to /opt/ansible/system/desktop/images/{{ xbc_desktop_name }}"
     copy:
-      src: "{{ xfconf_xfce4desktop_image_name }}"
-      dest: "{{ xfconf_xfce4desktop_image_path }}"
+      src: "{{ xbc_desktop_file }}"
+      dest: "/opt/ansible/system/desktop/images/{{ xbc_desktop_name }}"
       mode: 0755
+    when: 
+      - xbc_desktop_state == 'enabled' and xbc_desktop_type == 'file'  
 
-  - name: "Copy template lightdm-gtk-greeter.conf.j2 to /etc/lightdm/lightdm-gtk-greeter.conf"
-    template:
-      src: lightdm-gtk-greeter.conf.j2
-      dest: /etc/lightdm/lightdm-gtk-greeter.conf
-      mode: 0755
-
-  - name: "Copy template desktop-minimal-lightdm.conf.j2 to /etc/lightdm/lightdm.conf.d/desktop-minimal-lightdm.conf"
-    template:
-      src: 50-desktop-minimal-lightdm.conf.j2
-      dest: /etc/lightdm/lightdm.conf.d/50-desktop-minimal-lightdm.conf
-      mode: 0755
-
-  - name: "Copy template whiskermenu-defaults.rc.j2 to /etc/xdg/xdg-xubuntu/xfce4/whiskermenu/defaults.rc"
-    template:
-      src: whiskermenu-defaults.rc.j2
-      dest: /etc/xdg/xdg-xubuntu/xfce4/whiskermenu/defaults.rc
-      mode: 0644
-
-  - name: "Copy template custom-desktop.sh.j2 to /opt/ansible/scripts/custom-desktop.sh"
-    template:
-      src: custom-desktop.sh.j2
-      dest: /opt/ansible/scripts/custom-desktop.sh
-      mode: 0755 
-
-  - name: "Add custom-desktop.sh script to global login script /etc/xdg/autostart/custom-desktop.desktop"
+  - name: "Download Login wallpaper from {{ xbc_loginwp_path }} to /opt/ansible/system/login/images/{{ xbc_loginwp_name }}"
     copy:
-      src: custom-desktop.desktop
-      dest: /etc/xdg/autostart/custom-desktop.desktop
+      src: "{{ xbc_loginwp_file }}"
+      dest: "/opt/ansible/system/login/images/{{ xbc_loginwp_name }}"
+      mode: 0755
+    when: 
+      - xbc_loginwp_state == 'enabled' and xbc_loginwp_type == 'file'  
 
-  - name: "Copy template terminalrc.j2 to /etc/xdg/xdg-ubuntu/xfce4/terminal/terminal.rc"
+  - name: "Transfer templates to endpoint"
     template:
-      src: terminalrc.j2
-      dest: /etc/xdg/xdg-xubuntu/xfce4/terminal/terminalrc
+      src: "{{ item.src }}"
+      dest: "{{ item.dest }}"
+      mode: 0755
+    with_items:
+      - { src: lightdm-gtk-greeter.conf.j2, dest: /etc/lightdm/lightdm-gtk-greeter.conf }
+      - { src: 50-desktop-minimal-lightdm.conf.j2, dest: /etc/lightdm/lightdm.conf.d/50-desktop-minimal-lightdm.conf }
+      - { src: whiskermenu-defaults.rc.j2, dest: /etc/xdg/xdg-xubuntu/xfce4/whiskermenu/defaults.rc }
+      - { src: custom-desktop.sh.j2, dest: /opt/ansible/system/scripts/custom-desktop.sh }
+      - { src: terminalrc.j2, dest: /etc/xdg/xdg-xubuntu/xfce4/terminal/terminalrc }
+      - { src: custom-desktop.desktop, dest: /etc/xdg/autostart/custom-desktop.desktop }      
+      - { src: kioskrc.j2, dest: /etc/xdg/xfce4/kiosk/kioskrc }
 
-  - name: "Create directory /etc/xdg/xfce4/kiosk"
-    file:
-      path: /etc/xdg/xfce4/kiosk
-      state: directory
-
-  - name: "Copy template kioskrc.j2 to /etc/xdg/xfce4/kiosk/kioskrc"
-    template:
-      src: kioskrc.j2
-      dest: /etc/xdg/xfce4/kiosk/kioskrc
-    
-  - name: "For kioskmode (Autologin)"
-    import_tasks: xubuntu-core-autologin.yml 
-    when:
-      - ldm_autologin_status == "present"
